# algorithms-project-69

./: README.md  pyproject.toml
search_engine/: search_engine.py
search_engine/scripts/: hexlet_python_package.py
tests/: test_search_engine.py
